@@ -1,3 +1,8 @@
+2005-03-07  Ross Burton  <ross@burtonini.com>
+
+	* help/sound-juicer/C/sound-juicer.xml:
+	Added a tip on creating a MP3 profile.
+
 2005-03-07  Shaun McCance  <shaunm@gnome.org>
 
 	* help/sound-juicer/C/sound-juicer.xml:
